NIFI-16147 Removed unnecessary fully qualified names and added PMD UnnecessaryFullyQualifiedName (#11486)
Signed-off-by: David Handermann <exceptionfactory@apache.org>